tests/checker/diagnostics/0922_gadt_constructor_payload_bool_mismatch_07.ml
type _ expr_eta =
  | EInt_eta : int -> int expr_eta
  | EBool_eta : bool -> bool expr_eta

let _ : bool expr_eta = EBool_eta 6
